[tool.poetry]
name = "imredd-mqtt"
version = "0.1.0"
description = ""
authors = ["PatrickKvartsaniy <kvartsaniy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
